--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-less": "^1.2.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "browser-sync": "^1.3.6",
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-concat": "^2.4.0",
+    "gulp-jshint": "^1.8.4",
+    "gulp-less": "^1.3.5",
+    "gulp-livereload": "^2.1.1",
+    "gulp-minify-css": "^0.3.8",
+    "gulp-rename": "^1.2.0",
+    "gulp-sourcemaps": "^1.1.4",
+    "gulp-uglify": "^1.0.1"
   }
 }
