--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "homepage": "https://github.com/alilishan/Media-Manager#readme",
   "dependencies": {
+    "browser-sync": "^1.3.6",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-less": "^1.2.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^0.6.1",
-    "browser-sync": "^1.3.6",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.4.0",
