--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "media-manager",
-  "version": "1.0.0",
+  "version": "2.3.0",
   "description": "Standalone Media Manager for various projects",
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "browser-sync": "^1.3.6",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-less": "^1.2.0",
     "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^0.6.1",
